[Fix] redundant horizontal scroll bar

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -25,6 +25,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	width: 100vw;
+	max-width: 100%;
 }
 ol, ul {
 	list-style: none;
